Saving onboard data dao